--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <span>A</span>
         <span>L</span>
         <span>L</span>
-        <span>O</span>
-        <span>K</span>
-        <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>m</span>
+        <span>e</span>
+        <span>m</span>
+        <span>e</span>
+        <span>k</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih....</span>
+        <span>ada hadiah buat korang kntll anjinggg....</span>
     </div>
     <div class="button">
         <button>
