--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
-        <span>m</span>
-        <span>e</span>
-        <span>m</span>
-        <span>e</span>
-        <span>k</span>
+        <span>O</span>
+        <span>M</span>
+        <span>E</span>
+        <span>M</span>
+        <span>E</span>
+        <span>K</span>
     </div>
     <div class="description">
         <span>ada hadiah buat korang kntll anjinggg....</span>
